Update to add explicit :results silent

--- a/emacs-nougat/nougat/support/docker/dockerfile-mode.org
+++ b/emacs-nougat/nougat/support/docker/dockerfile-mode.org
@@ -1,5 +1,5 @@
 * dockerfile-mode
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package dockerfile-mode
     :config
     (require 'dockerfile-mode)
