--- a/emacs-nougat/nougat/support/docker/dockerfile-mode.org
+++ b/emacs-nougat/nougat/support/docker/dockerfile-mode.org
@@ -3,5 +3,5 @@
   (use-package dockerfile-mode
     :config
     (require 'dockerfile-mode)
-    (add-to-list 'auto-mode-alist '("Dockerfile\\'" . dockerfile-mode)))
+    (add-to-list 'auto-mode-alist '("/Dockerfile[^/]*\\'" . dockerfile-mode)))
 #+end_src
